--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'ru.vyarus.mkdocs' version '1.0.1'
 }
 
+version = "0.0.1"
+
 task wrapper(type: Wrapper) {
     gradleVersion = '4.9'
 }
