--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,9 @@ jobs:
     <<: *docker_config
     steps:
       - restore_cache:
-          key: |
-            - ghd-cache
-            - ghd-cache-build
+          key: ghd-cache
+      - restore_cache:
+          key: ghd-cache-build
       - *restore_gradle_cache
       - run:
           command: ./gradlew mkdocksPublish
